--- a/views/home.html
+++ b/views/home.html
@@ -13,16 +13,16 @@
         <meta name="MobileOptimized" content="320">
 		<meta http-equiv="cleartype" content="on">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		
+
         <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/touch/apple-touch-icon-144x144-precomposed.png">
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/touch/apple-touch-icon-114x114-precomposed.png">
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/touch/apple-touch-icon-72x72-precomposed.png">
         <link rel="apple-touch-icon-precomposed" href="img/touch/apple-touch-icon-57x57-precomposed.png">
         <link rel="shortcut icon" href="img/touch/apple-touch-icon.png">
-		
+
         <meta name="msapplication-TileImage" content="img/touch/apple-touch-icon-144x144-precomposed.png">
         <meta name="msapplication-TileColor" content="#222222">
-		
+
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
         <meta name="apple-mobile-web-app-title" content="">
@@ -31,7 +31,7 @@
         <link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" media="screen" title="no title" charset="utf-8">
         <link rel="stylesheet" href="css/main.css">
-		
+
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 		<!--[if lt IE 9]>
 			<link rel="stylesheet" href="css/ie.css" type="text/css" media="screen" title="no title" charset="utf-8">
@@ -99,7 +99,7 @@
 				background-color: rgba(0,0,0,.5);
 				-webkit-box-shadow: 0 0 1px rgba(255,255,255,.5)
 			}
-		
+
 		@font-face {
 			font-family: 'Din-LightAlternate';
 			src: url('fonts/din-lightalternate.eot');
@@ -111,7 +111,7 @@
 			font-weight: normal;
 			font-style: normal;
 		}
-		
+
 		@font-face {
 			font-family: 'Din-Light';
 			src: url('fonts/din-light.eot');
@@ -123,7 +123,7 @@
 			font-weight: normal;
 			font-style: normal;
 		}
-	
+
 		@font-face {
 			font-family: 'STXIHEI';
 			src: url('deibi-webfont.eot');
@@ -179,7 +179,7 @@
 		}
 		div.cell{background:pink;}*/
 		</style>
-		
+
 		<style>
 		.navbar {
 			width: 100%;
@@ -358,8 +358,8 @@
 			box-sizing: border-box;
 			text-transform: uppercase;
 		}
-		
-		
+
+
 		.hover-animate-up--span > i,
 		.hover-animate-up--span > span{
 			display:table-cell;
@@ -395,7 +395,7 @@
 		}
 		</style>
 		<style>
-	
+
 		nav.pagination ul {
 			margin:20px 0 0;
 			padding:0;
@@ -474,7 +474,7 @@
 			transition:all .5s;
 		}*/
 		</style>
-		
+
 		<style>
 		/* ---- .element-item ---- */
 		#tiles{
@@ -482,14 +482,14 @@
 		}
 		.item {
 			float: left;
-			
-			height: 362px;	
-			margin: 2px; 
+
+			height: 362px;
+			margin: 2px;
 			background: #888;
 			background-size:cover;
 			background-repeat:no-repeat;
 			position:relative;
-			
+
 			-webkit-perspective: 800px;
 			-moz-perspective: 800px;
 			-o-perspective: 800px;
@@ -517,7 +517,7 @@
 		  width:99.6%;
 		}
 
-		
+
 		.item .info .number {
 			font-size: 50px;
 			text-align: center;
@@ -539,7 +539,7 @@
 			-o-transition: all 0.4s ease-in-out;
 			-ms-transition: all 0.4s ease-in-out;
 			transition: all 0.4s ease-in-out;
-		
+
 			-webkit-transform-style: preserve-3d;
 			-moz-transform-style: preserve-3d;
 			-o-transform-style: preserve-3d;
@@ -568,7 +568,7 @@
 			-o-transform: rotate3d(0,1,0,180deg);
 			-ms-transform: rotate3d(0,1,0,180deg);
 			transform: rotate3d(0,1,0,180deg);
-	
+
 			background: #000;
 			opacity:0.8;
 		}
@@ -582,8 +582,8 @@
 			padding: 40px 0 0 0;
 			height: 90px;
 			font-family: 'Open Sans', Arial, sans-serif;
-			text-shadow: 
-				0 0 1px #fff, 
+			text-shadow:
+				0 0 1px #fff,
 				0 1px 2px rgba(0,0,0,0.3);
 		}
 
@@ -633,19 +633,19 @@
 			-o-opacity:0;
 			opacity: 0;
 			_filter:alpha(opacity=0);
-	
+
 			-webkit-transition: all 0.4s ease-in-out;
 			-moz-transition: all 0.4s ease-in-out;
 			-o-transition: all 0.4s ease-in-out;
 			-ms-transition: all 0.4s ease-in-out;
 			transition: all 0.4s ease-in-out;
-	
+
 			-webkit-transform: scale(0);
 			-moz-transform: scale(0);
 			-o-transform: scale(0);
 			-ms-transform: scale(0);
 			transform: scale(0);
-	
+
 			-webkit-backface-visibility: hidden;
 
 		}
@@ -657,8 +657,8 @@
 			font-size: 1em;
 			margin: 30px 0 0 40px;
 			font-family: 'Din-LightAlternate', 'Din-Light',Arial, sans-serif;
-			text-shadow: 
-				0 0 1px #fff, 
+			text-shadow:
+				0 0 1px #fff,
 				0 1px 2px rgba(0,0,0,0.3);
 		}
 		.ch-info h3 {
@@ -670,8 +670,8 @@
 			padding:0;
 			font-weight:normal;
 			font-family: 'Din-LightAlternate', 'Din-Light',Arial, sans-serif;
-			text-shadow: 
-				0 0 1px #fff, 
+			text-shadow:
+				0 0 1px #fff,
 				0 1px 2px rgba(0,0,0,0.3);
 		}
 
@@ -1000,7 +1000,7 @@
 			}
 		}
 		</style>
-		
+
     </head>
 	<body>
 		<!--[if lt IE 7]>
@@ -1009,7 +1009,7 @@
 			<header>
 				<div class="navbar">
 					<div class="logo page-width">
-						<object type="application/x-shockwave-flash" 
+						<object type="application/x-shockwave-flash"
 						data="img/logo.swf" wmode="transparent"
 						width="76" height="50">
 						<param name="movie" value="img/logo.swf" />
@@ -1017,7 +1017,7 @@
 						<param name="quality" value="high"/>
 						<embed name="Sample" value="img/logo.swf"></embed>
 					</object>
-					
+
 					<ul id="js-main-nav" class="nav">
 						<li class="subnav"><a href="javascript:void(0);"><span>About</span></a>
 							<div class="subnav__div">
@@ -1033,13 +1033,13 @@
 							</div>
 						</li>
 					</ul>
-					
+
 				</div>
 			</div>
 		</header>
-				
-					
-					
+
+
+
 		<div class="main">
 			<div class="page-width">
 				<ul class="heading--feature">
@@ -1053,14 +1053,14 @@
 				<div class="module-overlay-cover"></div>
 			</div>
 			<div class="home-banner"></div>
-			
-			
-			
+
+
+
 			<!-- <div id="wall" class="free-wall page-width">
 				<div class="row">
 					<div class="box one">
 						<div class="figure"></div>
-						<div class="figure-caption"></div>	
+						<div class="figure-caption"></div>
 					</div>
 					<div class="box double">2</div>
 				</div>
@@ -1072,14 +1072,28 @@
 					<div class="box half">1.5</div>
 					<div class="box half">1.5</div>
 				</div>
-			
+
 				<div class="row">
 					<div class="box full">3</div>
 				</div>
 			</div> -->
 			<!-- <div class="clearfix"></div> -->
 			<div class="page-width" id="tiles">
-				<div class="item twothirds" data-num="1" style="background-image:url(img/foto/twothird.png);">
+
+                <% for(var i=0;layout &&  i<layout.length; i++) { %>
+                    <div class="item <%=layout[i].layout%>" data-num="<%=layout[i].index%>" style="background-image:url(<%=layout[i].realPath%>);">
+                        <div class="ch-info">
+                            <div class="ch-info-back">
+                                <a href="/showcase/<%=layout[i].filename%>">
+                                    <span>showcase</span>
+                                    <h3><%=data[i].content%></h3>
+                                    <p><%=data[i].title%> <i class="fa fa-caret-right"></i></p>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                <%}%>
+				<!-- <div class="item twothirds" data-num="1" style="background-image:url(img/foto/twothird.png);">
 					<div class="ch-info">
 						<div class="ch-info-back">
 							<a href="/showcase/twothird">
@@ -1167,11 +1181,11 @@
 						</div>
 					</div>
 				</div>
-				
+
 				<div class="item onethird" data-num="9" style="background-image:url(img/grey.gif);" data-original="img/foto/onethird.png">
 					<div class="info"><p class="number">9</p></div>
 				</div>
-				
+
 				<div class="item onethird" data-num="10" style="background-image:url(img/grey.gif);" data-original="img/foto/onethird.png">
 					<div class="info"><p class="number">10</p></div>
 				</div>
@@ -1180,12 +1194,12 @@
 				</div>
 				<div class="item onethird" data-num="12" style="background-image:url(img/grey.gif);" data-original="img/foto/onethird.png">
 					<div class="info"><p class="number">12</p></div>
-				</div>
+				</div> -->
 			</div>
 			<div class="clearfix"></div>
-			
+
 			<!-- <div id="freewall" class="free-wall page-width"></div> -->
-			
+
 			<nav class='pagination page-width text-right' role='toolbar'>
 				<ul id="pagination">
 					<li class="prev"><a rel="prev" href="">&larr;</a></li>
@@ -1198,8 +1212,8 @@
 				</ul>
 			</nav>
 		</div>
-		
-			
+
+
 		<div class="back-to">
 			<a href="#" class="back-to--top">
 				<span class="hover-animate-up--span">
@@ -1212,7 +1226,7 @@
 			</a>
 		</div>
 
-    
+
 		<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
 		<script src="js/plugins.js"></script>
 		<script src="js/helper.js"></script>
@@ -1224,7 +1238,7 @@
             var resize=function(){
                 if(($('html').attr('class')).indexOf('lt-ie9')!=-1){
                    var winh=window.innerWidth||document.documentElement.offsetWidth||document.body.offsetWidth;
-                   
+
                    if(winh<=825){
                         $('.nav').css({'margin':0});
                         $('.heading--feature').css({
@@ -1232,29 +1246,29 @@
                             'margin-left':10});
                         $('.heading--feature li').css({
                             'font-size':'60%'});
-                            
+
                         $('.page-width').css({'width':320,'margin':'auto'});
                         $('.module-overlay-cover,.home-banner').css({
                             'width':320,
                             'height':120,
                             'margin':'auto'});
                         $('.home-banner').css({
-                            'background-image': 'url(img/home-banner-820.png)',                            
+                            'background-image': 'url(img/home-banner-820.png)',
                             'background-repeat':'no-repeat',
                             'background-size':'100% auto'
                         });
                         $('.onethird').css({
                           'width': 102.6667
                         });
-                        
+
                         $('.twothirds').css({
                           'width':209.3
                         });
-                        
+
                         $('.mid').css({
                           'width':156
                         });
-                        
+
                         $('.full').css({
                           'width':316
                         });
@@ -1264,13 +1278,13 @@
             $('.page-width').css({'width':820,'margin':'auto'});
             $('.module-overlay-cover,.home-banner').css({
                 'width':820,
-                'height':312,               
+                'height':312,
             '_filter':'alpha(opacity=10,finishOpacity=0,style=0)',
                 'margin':'auto',
                 '_margin-top':30
             });
             $('.home-banner').css({
-                'background-image': 'url(img/home-banner-820.png)',                
+                'background-image': 'url(img/home-banner-820.png)',
                 'background-repeat':'no-repeat',
                 'width':820,
                 'height':312,
@@ -1439,9 +1453,9 @@
               'width':'99.8%'
             });
         }
-      
-            
-               } 
+
+
+               }
             };
             $(function(){
                resize();
@@ -1471,7 +1485,7 @@
 // 				html += temp.replace(/\{height\}/g, 200).replace(/\{width\}/g, w).replace("{index}", i + 1);
 // 			}
 // 			$("#freewall").html(html);
-// 			
+//
 // 			var wall = new freewall("#freewall");
 // 			wall.reset({
 // 				selector: '.cell',
@@ -1493,7 +1507,7 @@
 // 				}
 // 			});
 // 			wall.fitWidth();
-// 			
+//
 // 			// var images = wall.container.find('.cell');
 // // 			var length = images.length;
 // // 			images.css({visibility: 'hidden'});
@@ -1506,11 +1520,11 @@
 // // 					}, 505);
 // // 				}
 // // 			});
-// 						
+//
 // 			$(window).trigger("resize");
-	
+
 			</script>
-			
+
 			<script>
 			$(function(){
 				$('.nav').on('mouseover','.subnav',function(){
@@ -1520,8 +1534,8 @@
 					$('.subnav').removeClass('hovering');
 					$('.subnav__div').removeClass('hover');
 				});
-				
-				
+
+
 				$('.back-to--top').hover(function() {
 					$(this).find(".hover-animate-up--span:first").clearQueue().stop().animate({top: "-100px"}, {duration: 400});
 					$(this).find(".hover-animate-up--span:last").clearQueue().stop().delay(400).animate({top: "0px"}, {duration: 750});
@@ -1529,12 +1543,12 @@
 					$(this).find(".hover-animate-up--span:first").clearQueue().stop().animate({top: "0px"}, {duration: 500});
 					$(this).find(".hover-animate-up--span:last").clearQueue().stop().animate({top: "200px"}, {duration: 500});
 				});
-				
-				
-				
+
+
+
 			});
 			</script>
-			
+
 			<script>
 			$(function(){
 				var $container = $('#tiles').isotope({
@@ -1557,16 +1571,16 @@
 				});
 			});
 			</script>
-			
+
 			<script src="js/vendor/jquery.lazyload.min.js" type="text/javascript" charset="utf-8"></script>
 			<script>
 			$(function(){
 				$(".item").lazyload({
 					effect : "fadeIn"
-				});	
+				});
 			});
 			</script>
-			
+
 			<script src="js/vendor/jquery-ias.min.js" type="text/javascript" charset="utf-8"></script>
 			<script>
 			$(function(){
@@ -1585,7 +1599,7 @@
 				ias.extension(new IASNoneLeftExtension({html: '<div style="position: absolute;text-align:center;bottom: -50px;width: 100%;"><p><em>暂时没新内容了，尽情期待哟!</em></p></div>'}));
 			});
 			</script>
-			
+
 			<script src="js/vendor/jquery.jscroll.min.js" type="text/javascript" charset="utf-8"></script>
 			<script>
 			$(function(){
@@ -1594,10 +1608,10 @@
 				    //padding: 2,
 				    nextSelector: '#pagination .next a:last',
 				    contentSelector: '.item'
-				});	
+				});
 			});
 			</script>
-			
+
 			<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
