--- a/views/backend/gallery.html
+++ b/views/backend/gallery.html
@@ -217,7 +217,7 @@
 									<!-- <figcaption><%= data[i].imageName%></figcaption> -->
 								</figure>
 								<form action="../" method="post" novalidate="novalidate">
-									<p>
+									<!-- <p>
 										<input type="radio" name="layout_<%= data[i]._id%>" value="0" id="<%= data[i]._id%>_0" <%if(0==data[i].layout) {%> checked="checked"<%}%>  />
 										<label for="<%= data[i]._id%>_0">Full</label>
 										<input type="radio" name="layout_<%= data[i]._id%>" value="1" id="<%= data[i]._id%>_1" <%if(1==data[i].layout) {%> checked="checked"<%}%> />
@@ -226,9 +226,9 @@
 										<label for="<%= data[i]._id%>_2">1/3</label>
 										<input type="radio" name="layout_<%= data[i]._id%>" value="3" id="<%= data[i]._id%>_3" <%if(3==data[i].layout) {%> checked="checked"<%}%> />
 										<label for="<%= data[i]._id%>_3">2/3</label>
-										<input type="hidden" value="<%= data[i]._id%>" name="target" />
-									</p>
 
+									</p> -->
+                                    <input type="hidden" value="<%= data[i]._id%>" name="target" />
 									<p>
 										<input type="text" id="caption_<%= data[i]._id%>" placeholder="图片标题" name="caption" class="{validate:{required:true, minlength:3}}" required="required" value="<%= data[i].title%>" />
 									</p>
@@ -297,7 +297,7 @@
 		$('#fotoWrapper form').submit(function(e){
 			e.preventDefault();
 			if ($(this)[0].checkValidity()) {
-				$.post( "/backend/gallery/update/"+$(this).find('[name="target"]').val(), $(this).serialize()+"&layout="+$(this).find('[name^="layout"]:checked').val(), function( data ) {
+				$.post( "/backend/gallery/update/"+$(this).find('[name="target"]').val(), $(this).serialize()/*+"&layout="+$(this).find('[name^="layout"]:checked').val()*/, function( data ) {
 					alert( "保存成功 " + data );
 				}).done(function() {
 					//alert( "second success" );
