--- a/views/backend/gallery.html
+++ b/views/backend/gallery.html
@@ -37,7 +37,7 @@
 	#main .box-content{
 		overflow-x: hidden;
 		overflow-y:auto;
-		min-height:80%;
+		min-height:400px;
 	}
 	label.list{
 		display:inline-block;
