--- a/views/news.html
+++ b/views/news.html
@@ -744,8 +744,8 @@
 			<nav class='pagination page-width text-right' role='toolbar'>
 				<ul>
 					<li><a rel="prev" href="">&larr;</a></li>
-					<li><a rel="first" href="">1</a></li>
-					<li><a class="current" href="">2</a></li>
+					<li><a class="current" rel="first" href="">1</a></li>
+					<li><a href="">2</a></li>
 					<li><a href="">3</a></li>
 					<li><a href="">4</a></li>
 					<li><a rel="last" href="">5</a></li>
