--- a/views/backend/layout.html
+++ b/views/backend/layout.html
@@ -184,7 +184,7 @@
 
 					<div class="box-content">
 						<ul id="sortable">
-							<li class="ui-state-default onethird"></li>
+							<!-- <li class="ui-state-default onethird"></li>
 							<li class="ui-state-default twothirds"></li>
 							<li class="ui-state-default mid"></li>
 							<li class="ui-state-default mid"></li>
@@ -195,7 +195,7 @@
 							<li class="ui-state-default twothirds"></li>
 							<li class="ui-state-default onethird"></li>
 							<li class="ui-state-default mid"></li>
-							<li class="ui-state-default mid"></li>
+							<li class="ui-state-default mid"></li> -->
 						</ul>
 
 						<div class="box grid_8 omega">
@@ -332,7 +332,8 @@
 			});
 
 			$('#saveLayout').on('click',function(e){
-
+				changed=false;
+				e.preventDefault();
 
 				$.post('/backend/layout/save',
 					{'data':getLayoutData()},
@@ -343,8 +344,7 @@
 				});
 				console.log(data);
 
-				changed=false;
-				e.preventDefault();
+				
 			});
 
 
@@ -352,16 +352,31 @@
 			window.onbeforeunload = function(){
 				if(changed) return 'You\'re about to leave without save the layout?';
 			}
+			var init=function(){
+				var layout=[
+					<% for(var i=0;layout &&  i<layout.length; i++) { %>
+						{'index':'<%=layout[i].index%>','path':'<%=layout[i].path%>','layout':'<%=layout[i].layout%>'},
+					<%}%>
+				];
+				var d=document.createDocumentFragment();				
+				layout.forEach(function(e,idx) {
+				  var li = document.createElement("li");
+				  var att=document.createAttribute("class");
+				  att.value="ui-state-default "+e.layout;
+				  li.setAttributeNode(att);
+				  var style=document.createAttribute("style");
+				  style.value='background-image:url('+e.path+')';
+				  li.setAttributeNode(style);
+				  d.appendChild(li);
+				});
 
-			var layout=[
-				<% for(var i=0;layout &&  i<layout.length; i++) { %>
-					{'index':'<%=layout[i].index%>','path':'<%=layout[i].path%>','layout':'<%=layout[i].layout%>'},
-				<%}%>
-			];
-
-			for(var i=0;i<layout.length;i++){
-				$('#sortable li').eq(layout[i].index).css('backgroundImage','url('+layout[i].path+')');
-			}
+				document.getElementById("sortable").appendChild(d);
+				
+			
+			};
+			
+			init();
+			
 		});
 
 		var getLayoutData=function(){
