--- a/views/home.html
+++ b/views/home.html
@@ -1087,8 +1087,24 @@
                             <div class="ch-info-back">
                                 <a href="/showcase/<%=layout[i].filename%>">
                                     <span>showcase</span>
-                                    <h3><%=data[i].content%></h3>
-                                    <p><%=data[i].title%> <i class="fa fa-caret-right"></i></p>
+                                    <h3><%
+										for(var j=0;j< data.length; j++){
+											if(data[j].filename==layout[i].filename) {
+										%>
+											<%=data[j].content%>
+										<%	
+											}
+										}
+										%></h3>
+                                    <p><%
+										for(var j=0;j< data.length; j++){
+											if(data[j].filename==layout[i].filename){
+										%>
+											<%=data[j].title%>
+										<%	
+											}
+										}
+										%> <i class="fa fa-caret-right"></i></p>
                                 </a>
                             </div>
                         </div>
