--- a/views/backend/gallery.html
+++ b/views/backend/gallery.html
@@ -35,7 +35,7 @@
 		box-shadow:inset 1px 1px 10px #cacaca;
 	}
 	#main .box-content{
-		overflow-x: hidden;
+		overflow-x: auto;
 		overflow-y:auto;
 		min-height:400px;
 	}
