--- a/public/css/normalize.css
+++ b/public/css/normalize.css
@@ -442,6 +442,7 @@ html input[type="button"], /* 1 */
 input[type="reset"],
 input[type="submit"] {
     -webkit-appearance: button; /* 2 */
+	-moz-appearance:button;
     cursor: pointer; /* 3 */
     *overflow: visible;  /* 4 */
 }
@@ -478,6 +479,7 @@ input[type="radio"] {
 
 input[type="search"] {
     -webkit-appearance: textfield; /* 1 */
+	-moz-apperarance:textfield;
     -moz-box-sizing: content-box;
     -webkit-box-sizing: content-box; /* 2 */
     box-sizing: content-box;
