--- a/views/career.html
+++ b/views/career.html
@@ -28,14 +28,14 @@
         <meta name="apple-mobile-web-app-title" content="">
 
 
-        <link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" media="screen" title="no title" charset="utf-8">
+        <link rel="stylesheet" href="bower_components/normalize.css/normalize.css" type="text/css" media="screen" title="no title" charset="utf-8">
+		<link rel="stylesheet" href="bower_components/fontawesome/css/font-awesome.min.css" type="text/css" media="screen" title="no title" charset="utf-8">
         <link rel="stylesheet" href="css/main.css">
 		
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+        <script src="bower_components/modernizr/modernizr.js" type="text/javascript" charset="utf-8"></script>
 		<!--[if lt IE 9]>
 			<link rel="stylesheet" href="css/ie.css" type="text/css" media="screen" title="no title" charset="utf-8">
-			<script src="js/vendor/css3-mediaqueries.js" type="text/javascript" charset="utf-8"></script>
+			<script src="bower_components/css3-mediaqueries-js/css3-mediaqueries.js" type="text/javascript" charset="utf-8"></script>
 		<![endif]-->
 		<style>
 		*,html,body,div,p,span,label,input,textarea,select,a,td,th,i,strong,em{
@@ -641,7 +641,7 @@
 	
 
     
-		<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+		<script src="bower_components/jquery/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/plugins.js"></script>
 		<script src="js/helper.js"></script>
 		<script src="js/main.js"></script>
