fix backend ie bug

--- a/views/backend/foto.html
+++ b/views/backend/foto.html
@@ -3,7 +3,7 @@
 	
 	<title>CyanRhino Backend System</title>
 	
-	<link rel="stylesheet" href="css/jquery.Jcrop.min.css" type="text/css" media="screen" title="no title" charset="utf-8">	
+	<link rel="stylesheet" href="/backend/css/jquery.Jcrop.min.css" type="text/css" media="screen" title="no title" charset="utf-8">	
 	<style>
 	progress[value] {
 		appearance: none;
@@ -165,13 +165,13 @@
 	<nav id="primary">
 		<ul>
 			<li>
-				<a href="home">
+				<a href="/backend/home">
 					<span class="glyph dashboard"></span>
 					控制台
 				</a>
 			</li>
 			<li>
-				<a href="layout">
+				<a href="/backend/layout">
 					<span class="glyph shuffle"></span>
 					界面外观
 				</a>
@@ -183,7 +183,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="news/list">
+				<a href="/backend/news/list">
 					<span class="glyph listicon"></span>
 					新闻管理
 				</a>
@@ -195,7 +195,7 @@
 				</a>
 			</li>
 			<li class="bottom">
-				<a href="logout">
+				<a href="/backend/logout">
 					<span class="glyph quit"></span>
 					登出
 				</a>
@@ -207,7 +207,7 @@
 	<nav id="secondary">
 		<ul>
 			<li class="active"><a href="javascript:;">上传图片</a></li>
-			<li><a href="gallery">图片库</a></li>
+			<li><a href="/backend/gallery">图片库</a></li>
 		</ul>
 
 		<div id="notifications">
@@ -287,7 +287,7 @@
 	</section>
 	
 	<% include js.ejs %>
-	<script src="js/jquery.Jcrop.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/backend/js/jquery.Jcrop.min.js" type="text/javascript" charset="utf-8"></script>
 	
 	<script>
 	// Check for the various File API support.
