--- a/views/backend/js.ejs
+++ b/views/backend/js.ejs
@@ -1,19 +1,19 @@
-	<script src="js/jquery.min.js"></script>
-	<script src="../js/vendor/jquery-ui-1.10.4.custom.min.js"></script>
-	<script src="js/jquery.cookies.js"></script>
-	<script src="js/jquery.pjax.js"></script>
-	<script src="js/formalize.min.js"></script>
-	<script src="js/jquery.metadata.js"></script>
-	<script src="js/jquery.validate.js"></script>
-	<script src="js/jquery.checkboxes.js"></script>
-	<script src="js/jquery.chosen.js"></script>
-	<script src="js/jquery.fileinput.js"></script>
-	<script src="js/jquery.datatables.js"></script>
-	<script src="js/jquery.sourcerer.js"></script>
-	<script src="js/jquery.tipsy.js"></script>
-	<script src="js/jquery.calendar.js"></script>
-	<script src="js/jquery.inputtags.min.js"></script>
-	<script src="js/jquery.wymeditor.js"></script>
-	<script src="js/jquery.livequery.js"></script>
-	<script src="js/jquery.flot.min.js"></script>
-	<script src="js/application.js"></script>
+	<script src="/backend/js/jquery.min.js"></script>
+	<script src="/js/vendor/jquery-ui-1.10.4.custom.min.js"></script>
+	<script src="/backend/js/jquery.cookies.js"></script>
+	<script src="/backend/js/jquery.pjax.js"></script>
+	<script src="/backend/js/formalize.min.js"></script>
+	<script src="/backend/js/jquery.metadata.js"></script>
+	<script src="/backend/js/jquery.validate.js"></script>
+	<script src="/backend/js/jquery.checkboxes.js"></script>
+	<script src="/backend/js/jquery.chosen.js"></script>
+	<script src="/backend/js/jquery.fileinput.js"></script>
+	<script src="/backend/js/jquery.datatables.js"></script>
+	<script src="/backend/js/jquery.sourcerer.js"></script>
+	<script src="/backend/js/jquery.tipsy.js"></script>
+	<script src="/backend/js/jquery.calendar.js"></script>
+	<script src="/backend/js/jquery.inputtags.min.js"></script>
+	<script src="/backend/js/jquery.wymeditor.js"></script>
+	<script src="/backend/js/jquery.livequery.js"></script>
+	<script src="/backend/js/jquery.flot.min.js"></script>
+	<script src="/backend/js/application.js"></script>
