--- a/views/backend/edit.html
+++ b/views/backend/edit.html
@@ -11,19 +11,19 @@
 	<nav id="primary">
 		<ul>
 			<li>
-				<a href="home">
+				<a href="/backend/home">
 					<span class="glyph dashboard"></span>
 					控制台
           </a>
 			</li>
 			<li>
-				<a href="layout">
+				<a href="/backend/layout">
 					<span class="glyph shuffle"></span>
 					界面外观
           </a>
 			</li>
 			<li>
-				<a href="gallery/add">
+				<a href="/backend/gallery/add">
 					<span class="glyph pencil"></span>
 					图片
           </a>
@@ -41,7 +41,7 @@
           </a>
 			</li>
 			<li class="bottom">
-				<a href="logout">
+				<a href="/backend/logout">
 					<span class="glyph quit"></span>
 					登出
           </a>
@@ -52,7 +52,7 @@
 	<!-- Secondary navigation -->
 	<nav id="secondary">
 		<ul>
-			<li><a href="news/list">新闻列表页</a></li>
+			<li><a href="/backend/news/list">新闻列表页</a></li>
 			<li class="active"><a href="javascript:;">新增文章（高级）</a></li>
 		</ul>
 
