--- a/views/backend/meta.ejs
+++ b/views/backend/meta.ejs
@@ -9,28 +9,28 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=3.0, user-scalable=yes" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  	<base href="/backend/" target="_self">
+  	
 	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/reset.css" />
-	<link rel="stylesheet" href="css/icons.css" />
-	<link rel="stylesheet" href="css/formalize.css" />
-	<link rel="stylesheet" href="css/checkboxes.css" />
-	<link rel="stylesheet" href="css/sourcerer.css" />
-	<link rel="stylesheet" href="css/jqueryui.css" />
-	<link rel="stylesheet" href="css/tipsy.css" />
-	<link rel="stylesheet" href="css/calendar.css" />
-	<link rel="stylesheet" href="css/tags.css" />
-	<link rel="stylesheet" href="css/fonts.css" />
-	<link rel="stylesheet" href="css/selectboxes.css" />
-	<link rel="stylesheet" href="css/960.css" />
-	<link rel="stylesheet" href="css/main.css" />
-	<link rel="stylesheet" media="all and (orientation:portrait)" href="css/portrait.css" />
-	<link rel="apple-touch-icon" href="tables/apple-touch-icon-precomposed.png" />
-	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+	<link rel="stylesheet" href="/backend/css/reset.css" />
+	<link rel="stylesheet" href="/backend/css/icons.css" />
+	<link rel="stylesheet" href="/backend/css/formalize.css" />
+	<link rel="stylesheet" href="/backend/css/checkboxes.css" />
+	<link rel="stylesheet" href="/backend/css/sourcerer.css" />
+	<link rel="stylesheet" href="/backend/css/jqueryui.css" />
+	<link rel="stylesheet" href="/backend/css/tipsy.css" />
+	<link rel="stylesheet" href="/backend/css/calendar.css" />
+	<link rel="stylesheet" href="/backend/css/tags.css" />
+	<link rel="stylesheet" href="/backend/css/fonts.css" />
+	<link rel="stylesheet" href="/backend/css/selectboxes.css" />
+	<link rel="stylesheet" href="/backend/css/960.css" />
+	<link rel="stylesheet" href="/backend/css/main.css" />
+	<link rel="stylesheet" media="all and (orientation:portrait)" href="/backend/css/portrait.css" />
+	<link rel="apple-touch-icon" href="/backend/apple-touch-icon-precomposed.png" />
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
   <!--[if lt IE 9]>
-  <script src="js/html5shiv.js"></script>
-  <script src="js/excanvas.js"></script>
+  <script src="/backend/js/html5shiv.js"></script>
+  <script src="/backend/js/excanvas.js"></script>
   <![endif]-->
   
   
